--- a/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
+++ b/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>chloroplast</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+
+    <Version>0.1.0</Version>
+    <Authors>Wilderness Labs</Authors>
+    <Company>Wilderness Labs</Company>
   </PropertyGroup>
 
   <ItemGroup>
