--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: .NET Core - build
 
 on:
   push:
@@ -31,10 +31,12 @@ jobs:
       with:
         name: chloroplast_tool
         path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
+
     - name: Push Nupkg to GitHub Packages
+      if: github.event == 'push'
       uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@v2.1
       with:
-        nupkg-path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
+        nupkg-path: './toolsrc/Chloroplast.Tool/nupkg/*.nupkg'
         repo-owner: wildlingdev
         gh-user: wildlingdev
         token:  ${{ secrets.GITHUB_TOKEN }}
