--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -33,7 +33,7 @@ jobs:
         path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
 
     - name: Push Nupkg to GitHub Packages
-      if: github.event == 'push'
+ #     if: github.event == 'push'
       uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@v2.1
       with:
         nupkg-path: './toolsrc/Chloroplast.Tool/nupkg/*.nupkg'
