--- a/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
+++ b/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
@@ -7,6 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>chloroplast</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
+    <IsPackable>true</IsPackable>
 
     <Version>0.1.0</Version>
     <Authors>Wilderness Labs</Authors>
