--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,10 +16,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.x,
-        source-url: https://nuget.pkg.github.com/wildernesslabs/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        dotnet-version: 3.1.x
     - name: Install dependencies
       run: dotnet restore toolsrc
     - name: Build
@@ -33,6 +30,10 @@ jobs:
       with:
         name: chloroplast_tool
         path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
+    - name: Add private GitHub registry to NuGet
+      run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/wildernesslabs/index.json -Username wildlingdev -Password ${{ secrets.GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./toolsrc/Chloroplast.Tool/nupkg/*.nupkg --skip-duplicate --no-symbols true
 
