--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -31,7 +31,7 @@ jobs:
         name: chloroplast_tool
         path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
     - name: Add private GitHub registry to NuGet
-      run: dotnet nuget add source https://nuget.pkg.github.com/wildernesslabs/index.json --name "github" --username wildlingdev --password ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget add source https://nuget.pkg.github.com/wildernesslabs/index.json --name "github" --username wildlingdev --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Push generated package to GitHub registry
