adding package publishing (#2)

--- a/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
+++ b/toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj
@@ -7,10 +7,14 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>chloroplast</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
+    <IsPackable>true</IsPackable>
 
     <Version>0.1.0</Version>
     <Authors>Wilderness Labs</Authors>
     <Company>Wilderness Labs</Company>
+    <PackageDescription>Markdown-based static site generator</PackageDescription>
+    <RepositoryUrl>https://github.com/WildernessLabs/Chloroplast</RepositoryUrl>
+ 
   </PropertyGroup>
 
   <ItemGroup>
