added init command
Nav Menu Rendering

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ out
 *.user
 *.userosscache
 *.sln.docstates
+launchSettings.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
