--- a/toolsrc/Chloroplast.Test/Chloroplast.Test.csproj
+++ b/toolsrc/Chloroplast.Test/Chloroplast.Test.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.9" />
+    <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
