--- a/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
+++ b/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.7" />
     <PackageReference Include="MiniRazor" Version="1.1.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.28" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
