--- a/toolsrc/Chloroplast.Web/Chloroplast.Web.csproj
+++ b/toolsrc/Chloroplast.Web/Chloroplast.Web.csproj
@@ -5,4 +5,7 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="MimeTypeMapOfficial" Version="1.0.15" />
+  </ItemGroup>
 </Project>
