WIP: starting ecmaxmlrenderer

--- a/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
+++ b/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
@@ -28,5 +28,6 @@
     <Folder Include="Rendering\" />
     <Folder Include="Extensions\" />
     <Folder Include="Config\" />
+    <Folder Include="Loaders\" />
   </ItemGroup>
 </Project>
