--- a/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
+++ b/toolsrc/Chloroplast.Core/Chloroplast.Core.csproj
@@ -6,7 +6,7 @@
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <IsPackable>true</IsPackable>
 
-    <Version>0.4.0</Version>
+    <Version>0.5.0</Version>
     <Authors>Wilderness Labs</Authors>
     <Company>Wilderness Labs</Company>
     <PackageDescription>Core library for Chloroplast.Tool</PackageDescription>
@@ -28,5 +28,6 @@
     <Folder Include="Rendering\" />
     <Folder Include="Extensions\" />
     <Folder Include="Config\" />
+    <Folder Include="Loaders\" />
   </ItemGroup>
 </Project>
