--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 3.1.x
+        dotnet-version: 8.0.x
     - name: Install dependencies
       run: dotnet restore toolsrc
     - name: Build
@@ -32,7 +32,7 @@ jobs:
     - name: Pack Tool
       run: dotnet pack toolsrc/Chloroplast.Tool/    
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.1.3
+      uses: actions/upload-artifact@v4
       with:
         name: chloroplast_tool
         path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
