--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: .NET Core - build
+name: .NET Core
 
 on:
   push:
@@ -8,13 +8,13 @@ on:
 
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1 
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    outputs:
+      package_version: ${{ steps.version.outputs.package_version }}
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -22,11 +22,12 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Calculate version
+      id: version
       run: |
         # Extract major.minor version from the Tool csproj file
         BASE_VERSION=$(grep '<Version.*>' toolsrc/Chloroplast.Tool/Chloroplast.Tool.csproj | sed 's/.*<Version[^>]*>\([^<]*\)<\/Version>.*/\1/' | sed 's/-dev//' | cut -d. -f1,2)
         VERSION="$BASE_VERSION.${{ github.run_number }}"
-        echo "PACKAGE_VERSION=$VERSION" >> $GITHUB_ENV
+        echo "package_version=$VERSION" >> $GITHUB_OUTPUT
         echo "Building version: $VERSION (base: $BASE_VERSION)"
     - name: Install dependencies
       run: dotnet restore toolsrc
@@ -34,33 +35,60 @@ jobs:
       run: dotnet build --configuration Release --no-restore toolsrc
     - name: Test
       run: dotnet test --no-restore --verbosity normal toolsrc
-    - name: Pack
-      run: dotnet pack toolsrc/Chloroplast.Core/ -p:Version=${{ env.PACKAGE_VERSION }}   
-    - name: Pack Tool
-      run: dotnet pack toolsrc/Chloroplast.Tool/ -p:Version=${{ env.PACKAGE_VERSION }}    
-    - name: Upload a Build Artifact
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: chloroplast_tool
-        path: toolsrc/Chloroplast.Tool/nupkg/*.nupkg
-    - name: Add private GitHub registry to NuGet
-      if: github.ref == 'refs/heads/main'
-      run: dotnet nuget add source https://nuget.pkg.github.com/WildernessLabs/index.json --name "github" --username WildernessLabs --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Tool Core generated package to GitHub registry
-      if: github.ref == 'refs/heads/main'
-      run: dotnet nuget push ./toolsrc/Chloroplast.Core/nupkg/*.nupkg --source "github" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate --no-symbols true
-      env:
-        DOTNET_SYSTEM_NET_HTTP_USESOCKETSHTTPHANDLER: 0
-    - name: Tool Push generated package to GitHub registry
-      if: github.ref == 'refs/heads/main'
-      run: dotnet nuget push ./toolsrc/Chloroplast.Tool/nupkg/*.nupkg --source "github" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate --no-symbols true
-      env:
-        DOTNET_SYSTEM_NET_HTTP_USESOCKETSHTTPHANDLER: 0
-    - name: Tool Push generated package to nuget.org registry
-      if: github.ref == 'refs/heads/main'
-      run: dotnet nuget push ./toolsrc/Chloroplast.Tool/nupkg/*.nupkg --source "nuget.org" --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate --no-symbols true
-      env:
-        DOTNET_SYSTEM_NET_HTTP_USESOCKETSHTTPHANDLER: 0
+        name: build-artifacts
+        path: |
+          toolsrc/Chloroplast.Core/bin/Release
+          toolsrc/Chloroplast.Tool/bin/Release
+
+  pack:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: artifacts
+      - name: Pack Core
+        run: dotnet pack toolsrc/Chloroplast.Core/ -p:Version=${{ needs.build.outputs.package_version }} --no-build
+      - name: Pack Tool
+        run: dotnet pack toolsrc/Chloroplast.Tool/ -p:Version=${{ needs.build.outputs.package_version }} --no-build
+      - name: Upload packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages
+          path: |
+            toolsrc/Chloroplast.Core/nupkg/*.nupkg
+            toolsrc/Chloroplast.Tool/nupkg/*.nupkg
+
+  publish:
+    needs: pack
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download packages
+        uses: actions/download-artifact@v4
+        with:
+          name: packages
+          path: packages
+      - name: List packages
+        run: |
+          echo "Packages directory contents:"
+          ls -R packages
+      - name: Add private GitHub registry to NuGet
+        run: dotnet nuget add source https://nuget.pkg.github.com/WildernessLabs/index.json --name "github" --username WildernessLabs --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+      - name: Push Core package to GitHub registry
+        run: dotnet nuget push packages/Chloroplast.Core.*.nupkg --source "github" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+      - name: Push Tool package to GitHub registry
+        run: dotnet nuget push packages/Chloroplast.Tool.*.nupkg --source "github" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+      - name: Push Tool package to nuget.org registry
+        run: dotnet nuget push packages/Chloroplast.Tool.*.nupkg --source "nuget.org" --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
 
