--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -52,6 +52,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore toolsrc
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
