--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -59,6 +59,8 @@ jobs:
         with:
           name: build-artifacts
           path: .
+      - name: Restore dependencies
+        run: dotnet restore toolsrc
       - name: Pack Core
         run: dotnet pack toolsrc/Chloroplast.Core/ -p:Version=${{ needs.build.outputs.package_version }} --no-build
       - name: Pack Tool
