--- a/toolsrc/Chloroplast.Test/Chloroplast.Test.csproj
+++ b/toolsrc/Chloroplast.Test/Chloroplast.Test.csproj
@@ -17,6 +17,8 @@
 </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" />
     <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.5.0" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
